fixed the centering but still havent figured out the background image or the spacing of the header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* * { margin:0;} */
+* { margin:0;}
 
 /* Stuff left to do:
 1 - figure out the spacing in-between paragraphs
@@ -7,7 +7,6 @@
 
 body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    background-color: red;
     background-image: url("/assets/images/circle-blues.png");
     background-repeat: repeat;
 }
@@ -30,14 +29,15 @@ header {
     border-color: #cccccc;
     border-style: solid;
     border-width: 0px 0px 2px 0px;
+    width: 960px;
 }
 
 h1 {
     color: white;
     padding: 25px;
     background-color: #4aaaa5;
-    width: 40%;
-    margin: 5px 10px 0px 100px;
+    width: 25%;
+    margin: 5px 10px 0px 400px;
     text-align: center;
     float: left;
 }
@@ -50,7 +50,7 @@ h2 {
 }
 
 .navigation {
-    float: right;
+    float: left;
     margin: 50px 0px 0px 0px;
     text-align: bottom;
 }
@@ -64,6 +64,8 @@ h2 {
     padding: 10px;
     line-height: 1.6;
     width: 960px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 footer {
